[package]
name = "block-explorer-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "3.0", features = ["derive"]}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = { version = "0.4" }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0" }
either = { version = "1.5.0"}
tokio = { version = "1.0.0", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.17.1", features = ["connect", "native-tls"]}
url = { version = "2.0.0" }
