[package]
# TODO: (@leonardo.lima) update project name
name = "block-explorer-cli"
version = "0.1.0"
edition = "2021"
authors = ["Leonardo Souza <leonardo.lima@gmail.com>", "LLFourn <lloyd.fourn@gmail.com>"]
repository = "https://github.com/oleonardolima/block-explorer-cli"
description = "A real-time stream of blocks library"
keywords = ["bitcoin", "blockchain", "blocks", "mempool"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "3.0", features = ["derive"]}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = { version = "0.4" }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.0.0", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.17.1", features = ["connect", "native-tls"]}
url = { version = "2.0.0" }

[lib]
name = "block_explorer_cli"
path = "src/lib.rs"

[[bin]]
name = "block-explorer-cli"
path = "bin.rs"
