[package]
name = "block-events"
version = "0.1.0"
edition = "2021"
authors = ["Leonardo Souza <leonardolimasza@gmail.com>", "LLFourn <lloyd.fourn@gmail.com>"]
repository = "https://github.com/oleonardolima/block-events"
description = "A real-time stream block events library, covering connected and disconnected blocks.\nThis a work in progress project for Summer of Bitcoin 2022."
keywords = ["bitcoin", "blockchain", "blocks", "mempool-space", "stream", "events", "summer-of-bitcoin"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1.0" }
async-stream = { version = "0.3.3"}
bitcoin = { version = "0.28", features = ["use-serde", "base64"] }
clap = { version = "3.0", features = ["derive"]}
env_logger = { version = "0.9.0" }
futures-core = { version = "0.3" }
futures-util = { version = "0.3" }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.0.0", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.17.1", features = ["connect", "native-tls"]}
url = { version = "2.0.0" }

[lib]
name = "block_events"
path = "src/lib.rs"

[[bin]]
name = "block-events-cli"
path = "src/bin.rs"
